# OpenVision

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  cameras.py  deps.py  events.py  stream.py  users.py  ws.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  alert.py  camera.py  event.py  track.py  user.py
backend/app/schemas/: __init__.py  alert.py  camera.py  event.py  user.py
backend/app/services/: camera_watcher.py  detector.py  stream_manager.py
backend/app/workers/: detection_worker.py
backend/tests/: conftest.py  test_api.py  test_detector.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CameraModal.tsx  Sidebar.tsx  VideoPlayer.tsx
frontend/src/lib/: api.ts  stream-client.ts  utils.ts  webrtc.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx  Eventos.tsx  Monitoreo.tsx
frontend/src/stores/: useStore.ts
frontend/tests/: App.test.tsx
infrastructure/docker/: docker-compose.gpu.yml  docker-compose.yml
infrastructure/nginx/: default.conf
